--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "hello-world",
+  "name": "house-chores-generator",
   "version": "1.0.0",
-  "description": "Hello world with express and node.js",
+  "description": "House Chores Generator",
   "main": "app.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
@@ -9,10 +9,12 @@
   "author": "OSU",
   "license": "ISC",
   "dependencies": {
+    "bcryptjs": "^2.4.3",
     "body-parser": "^1.13.3",
+    "connect-mongo": "^2.0.1",
     "express": "^4.13.2",
     "express-handlebars": "^2.0.1",
     "express-session": "^1.11.3",
-    "mysql": "^2.8.0"
+    "mongoose": "^5.1.6"
   }
 }
