--- a/package.json
+++ b/package.json
@@ -4,8 +4,7 @@
   "description": "House Chores Generator",
   "main": "app.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node app.js 3000"
+    "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "OSU",
   "license": "ISC",
